--- a/app/src/main/res/layout/account_detail.xml
+++ b/app/src/main/res/layout/account_detail.xml
@@ -4,18 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/detail_toolbar"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent" />
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:layout_constraintTop_toBottomOf="@id/detail_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
+        app:shapeAppearance="@style/circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/iv_avatar"
